# FastDEM

./: README.md
.github/workflows/: build.yml
fastdem/: CMakeLists.txt
fastdem/benchmarks/: benchmark_estimator_comparison.cpp  benchmark_height_update.cpp  benchmark_postprocess_iteration.cpp  build.sh  plot.py  plot_results.py
fastdem/cmake/: fastdemConfig.cmake.in
fastdem/config/: default.yaml
fastdem/examples/01_hello_mapping/: main.cpp
fastdem/include/benchmark/: profiler.hpp
fastdem/include/fastdem/: elevation_map.hpp  fastdem.hpp
fastdem/include/fastdem/bridge/: ros1.hpp  ros2.hpp
fastdem/include/fastdem/bridge/ros/: impl.hpp  impl_visualization.hpp
fastdem/include/fastdem/config/: mapping.hpp
fastdem/include/fastdem/mapping/: elevation_mapping.hpp  grid_index_hash.hpp  kalman_estimation.hpp  moving_average_estimation.hpp  quantile_estimation.hpp  stat_mean_estimation.hpp
fastdem/include/fastdem/postprocess/: spatial_smoothing.hpp
fastdem/lib/grid_map_core/: CMakeLists.txt  LICENSE
fastdem/lib/grid_map_core/src/: GridMap.cpp
fastdem/lib/nanoPCL/: CMakeLists.txt
fastdem/lib/nanoPCL/tests/: test_filters.cpp
fastdem/src/: config_fastdem.cpp  elevation_mapping.cpp  fastdem.cpp  feature_extraction.cpp  inpainting.cpp  io_npz.cpp  io_png.cpp  pcd_convert.cpp  raycasting.cpp  uncertainty_fusion.cpp
fastdem/tests/: test_dual_layer.cpp  test_elevation_map.cpp  test_fastdem_integration.cpp  test_kalman_estimation.cpp  test_map_io.cpp  test_online_mode.cpp  test_postprocess.cpp  test_quantile_estimation.cpp  test_rasterization.cpp
ros1/: CMakeLists.txt
ros1/config/: global_mapping.yaml  local_mapping.yaml
ros1/launch/: run.launch
ros1/src/: fastdem_ros_node.cpp
ros2/: CMakeLists.txt
ros2/src/: fastdem_ros_node.cpp
